Symbol not found: __ZN3WTF8LockBase10unlockSlowEv https://bugs.webkit.org/show_bug.cgi?id=180691

Reviewed by Yusuke Suzuki.

* wtf/mac/DeprecatedSymbolsUsedBySafari.mm:
(WTF::LockBase::lockSlow):
(WTF::LockBase::unlockSlow):
Add back LockBase Symbols used by System Safari on 10.13.

Canonical link: https://commits.webkit.org/196607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225792 268f45cc-cd09-0410-ab3c-d52691b4dbfc